Fix layout bug for membership

--- a/src/app/features/first-buyers/components/property-select/property-select.component.scss
+++ b/src/app/features/first-buyers/components/property-select/property-select.component.scss
@@ -2,209 +2,199 @@
 
 //////// MOBILE STYLING ////////
 
-@media (max-width: 600px) {
-  ::ng-deep .cdk-overlay-container,
-  .cdk-global-overlay-wrapper {
+::ng-deep .cdk-overlay-container,
+.cdk-global-overlay-wrapper {
+  @media (max-width: 600px) {
     width: 100%;
-    height: 100%;
   }
+}
 
-  ::ng-deep .cdk-overlay-pane {
-    // height: 100% !important;
-    max-height: unset !important ;
+::ng-deep .cdk-overlay-pane {
+  height: 100% !important;
+  @media (max-width: 600px) {
+    height: 100% !important;
   }
+  max-height: unset !important ;
+}
 
-  ::ng-deep .mat-dialog-container {
-    border-radius: 100px;
+::ng-deep .mat-dialog-container {
+  border-radius: 100px;
+  margin: unset !important;
+  background: $blue-medium;
+  @media (min-width: 601px) {
     margin: unset !important;
-    background: $blue-medium;
-    @media (min-width: 601px) {
-      margin: unset !important;
-      height: 44vh !important;
-      top: 15vh;
-    }
+    height: 44vh !important;
+    top: 15vh;
+  }
+}
+
+.main-div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background: $blue-medium;
+}
+
+.list-div {
+  background: $blue-medium;
+  display: flex;
+  p {
+    color: $white;
+    background: $blue;
+    font-size: 1rem;
+    margin-top: 10px;
+    position: relative;
+    left: 35px;
+    width: 80%;
+    border-radius: 9px;
+    padding: 15px;
+    font-weight: 400;
+  }
+  .p-selected {
+    background: $karl-blue;
+    border: 1px solid #478ccc;
   }
 
-  .main-div {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background: $blue-medium;
-  }
-
-  .list-div {
-    background: $blue-medium;
-    display: flex;
-    p {
-      color: $white;
-      background: $blue;
-      font-size: 1rem;
-      margin-top: 10px;
-      position: relative;
-      left: 35px;
-      width: 80%;
-      border-radius: 9px;
-      padding: 15px;
-      font-weight: 400;
-    }
-    .p-selected {
-      background: $karl-blue;
-      border: 1px solid #478ccc;
-    }
-
-    .remove-icon-list {
-      width: 1.5rem;
-      z-index: 1;
-      margin-top: 10px;
-    }
-  }
-
-  .dropdown-scroll {
-    background: $blue-medium;
-    padding-bottom: 5vh;
-    z-index: 0;
-    overflow-y: scroll;
-    height: 31vh;
-    //border-bottom: 1px solid #478ccc;
-    @media (min-height: 600px) and (min-width: 360px) {
-      height: 37vh;
-    }
-    @media (min-height: 600px) and (max-width: 360px) {
-      height: 35vh;
-    }
-    @media (min-height: 700px) {
-      height: 39vh;
-    }
-    @media (min-height: 800px) {
-      height: 35vh;
-    }
-  }
-
-  .search-div {
-    background-color: $blue-medium;
-    width: 100%;
-    padding: 10px 0;
+  .remove-icon-list {
+    width: 1.5rem;
     z-index: 1;
-    display: flex;
-    border-bottom: 1px solid #fff;
-
-    input {
-      color: $white;
-      background: $blue-medium;
-      border: none;
-      margin-left: 10px;
-      position: relative;
-    }
-    ::placeholder {
-      font-size: 16px;
-      font-style: italic;
-      color: $white;
-      position: relative;
-      font-weight: 300;
-    }
-
-    input:focus::placeholder {
-      //color: transparent;
-      visibility: hidden;
-    }
-
-    .search-div-input {
-      width: 100%;
-    }
-
-    .search-icon {
-      width: 6%;
-      z-index: 2;
-      margin-right: 10px;
-    }
+    margin-top: 10px;
   }
+}
 
-  .chosen-memberships-div {
-    display: flex;
-    flex-direction: column;
-    height: 23vh;
-    max-height: 23vh;
-    overflow-y: scroll;
-    background: #162537;
+.dropdown-scroll {
+  background: $blue-medium;
+  padding-bottom: 15%;
+  z-index: 0;
+  overflow-y: scroll;
+  height: 55%;
+}
 
-    // position: fixed;
-    z-index: 2;
-    width: 100%;
-    border-bottom: 1px solid #478ccc;
-    h2 {
-      text-align: center;
-      font-size: 16px;
-      font-weight: 300;
-      line-height: 1.2;
-      color: white;
-      padding: 10px;
-    }
-    p {
-      color: $white;
-      background: $karl-blue;
-      font-size: 1rem;
-      margin-top: 20px;
-      border: 1px solid #478ccc;
-
-      left: 35px;
-      width: 80%;
-      border-radius: 9px;
-      padding: 15px;
-      margin: 10px;
-    }
-    .p-selected {
-      background: $blue-medium;
-    }
-    .item-list {
-    }
-    .remove-icon {
-      width: 6%;
-    }
-
-    .selected-membership {
-      display: flex;
-      p {
-        font-weight: 500;
-        margin-left: 35px;
-      }
-    }
+.search-div {
+  background-color: $blue-medium;
+  width: 100%;
+  height: 10%;
+  padding: 10px 0;
+  z-index: 1;
+  display: flex;
+  border-bottom: 1px solid #fff;
+  //height: 50px !important;
+  input {
+    color: $white;
+    background: $blue-medium;
+    border: none;
+    margin-left: 10px;
+    position: relative;
   }
-
-  .buttons {
-    position: fixed;
-    background: $white;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    bottom: 0;
-    width: 100%;
-    padding: 10px;
-  }
-
-  .seleced-membership-top {
+  ::placeholder {
+    font-size: 16px;
+    font-style: italic;
     color: $white;
     position: relative;
-    left: 20px;
-    font-weight: 400;
-    font-size: 1.1rem;
+    font-weight: 300;
   }
 
-  ::-webkit-scrollbar {
-    width: 8px;
-    background: inherit;
+  input:focus::placeholder {
+    //color: transparent;
+    visibility: hidden;
   }
 
-  ::-webkit-scrollbar-track {
-    border-radius: 10px;
+  .search-div-input {
+    width: 100%;
   }
 
-  ::-webkit-scrollbar-thumb {
-    background: grey;
-    border-radius: 10px;
+  .search-icon {
+    width: 6%;
+    z-index: 2;
+    margin-right: 10px;
+  }
+}
+
+.chosen-memberships-div {
+  display: flex;
+  flex-direction: column;
+  height: 20%;
+  max-height: 23vh;
+  overflow-y: scroll;
+  background: #162537;
+
+  // position: fixed;
+  z-index: 2;
+  width: 100%;
+  border-bottom: 1px solid #478ccc;
+  h2 {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.2;
+    color: white;
+    padding: 10px;
+  }
+  p {
+    color: $white;
+    background: $karl-blue;
+    font-size: 1rem;
+    margin-top: 20px;
+    border: 1px solid #478ccc;
+
+    left: 35px;
+    width: 80%;
+    border-radius: 9px;
+    padding: 15px;
+    margin: 10px;
+  }
+  .p-selected {
+    background: $blue-medium;
+  }
+  .item-list {
+  }
+  .remove-icon {
+    width: 6%;
   }
 
-  ::-webkit-scrollbar-thumb:hover {
-    background: rgb(54, 56, 58);
+  .selected-membership {
+    display: flex;
+    p {
+      font-weight: 500;
+      margin-left: 35px;
+    }
   }
+}
+
+.buttons {
+  position: fixed;
+  background: $white;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+}
+
+.seleced-membership-top {
+  color: $white;
+  position: relative;
+  left: 20px;
+  font-weight: 400;
+  font-size: 1.1rem;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background: inherit;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(54, 56, 58);
 }
 
 //////// DESKTOP STYLING ////////
@@ -217,7 +207,7 @@
   }
 
   ::ng-deep .cdk-overlay-pane {
-    // height: 100% !important;
+    height: 100% !important;
     max-height: unset !important ;
   }
 
